Auth API: DROP ANY NOTION OF E-MAIL CONFIRMATION AND PASSWORD RESET
