# src/auth-server/handlers/requestPasswordResetToken.ts
@@ -1,10 +1,0 @@
-import express from 'express'
-import { AuthApiError } from '../errors'
-
-export const requestPasswordResetToken: (
-  req: express.Request,
-  res: express.Response,
-  next: express.NextFunction
-) => Promise<void> = async (req, res, next) => {
-  return next(new AuthApiError('Unimplemented', 501))
-}
