# src/auth-server/handlers/resetPassword.ts
@@ -1,10 +1,0 @@
-import express from 'express'
-import { AuthApiError } from '../errors'
-
-export const resetPassword: (
-  req: express.Request,
-  res: express.Response,
-  next: express.NextFunction
-) => Promise<void> = async (req, res, next) => {
-  return next(new AuthApiError('Unimplemented', 501))
-}
